--- a/demo/src/main/resources/static/css/stylesheet.css
+++ b/demo/src/main/resources/static/css/stylesheet.css
@@ -1,12 +1,10 @@
-/*{\rtf1\ansi\ansicpg932\cocoartf1671\cocoasubrtf500
-{\fonttbl}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-}*/
 
 
-/*　ヘッダー　*/
+/*
+*　
+ヘッダー　
+*
+*/
 .header {
   background-color: #00008B;
   height: 100px;
@@ -28,7 +26,11 @@
 }
 
 
-/*　メイン　*/
+/*
+*　
+メイン　
+*
+*/
 .main {
   min-height:1000px;
   background-color:#DCDCDC;
@@ -53,7 +55,6 @@
 
 .period {
   width:200px;
-  /*margin-top:8px;*/
   padding:5px;
   font-size:18px;
   border: 1px solid #000000;
@@ -73,14 +74,18 @@
 }
 
 /**/
+.todo-message-Top {
+     margin-top:25px;
+    text-align:center;
+}
 .todo-message {
+    margin-top:30px;
     color:#ff0000;
-    margin-left: 100px;
-
+    text-align:center;
 }
 
 .todo {
-    font-size:15px;
+    /*font-size:15px;
     width:1000px;
     background-color:#ffffff;
     margin-bottom:10px;
@@ -88,15 +93,12 @@
     padding-left:100px;
     border: 1px solid #000000;
     padding-top:15px;
-    padding-bottom:15px;
-
+    padding-bottom:15px;*/
 }
 
+
 .done {
-    /*float:right;*/
     font-size:30px;
-    margin-right:100px;
-    margin-left:30px;
     width:150px;
     height:60px;
 }
@@ -111,23 +113,32 @@
 
 .edit {
     background-color:#90ee90;
-    /*float:right;*/
     font-size:30px;
     width:150px;
     height:60px;
 }
 
 
-/* フッター */
+
+
+/*
+*　
+フッター　
+*
+*/
 footer {
  background-color: #DCDCDC;
  height: 100px;
 }
-
+/************************************************/
+/**
+*
+*検索画面
+*
+**/
 .search {
   width:600px;
   margin-left:100px;
-  margin-top:20px;
   padding:5px;
   font-size:25px;
   border: 1px solid #000000;
@@ -136,10 +147,13 @@ footer {
 
 .search-button {
     background-color:#c0c0c0;
-    margin-top:20px;
     margin-left:20px;
     font-size:25px;
     border: 1px solid #c0c0c0;
     width:200px;
 
+}
+
+.search-form-title {
+    margin-left:100px;
 }
